# congen

./: .gitignore  Cargo.toml  egypt.json  generation.json  index.html
assets/: sw.js
examples/: pulmonic-consonants.csv  read_consonants.rs  simplelang  vowels.csv
sounds/: co-articulated.csv  non-pulmonic.csv  pulmonic-consonants.csv
src/: app.rs  generation.rs  lib.rs  main.rs  raw_data.rs  rewrite.rs  sound_change.rs  sounds.rs  word.rs
src/app/: file_handling.rs  header.rs  ipa.rs  sound_change.rs  word_gen.rs
src/app/word_gen/: advanced.rs  instructions.rs  save.rs  settings.rs  simple.rs
src/generation/: instruction.rs  parse.rs
