[package]
name = "congen"
version = "0.4.1"
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_distr = "0.4"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui-dropdown = "0.11.0"
itertools = "0.13"
strum = {  version ="0.26", features = ["derive"] }
strum_macros = "0.26"
egui_extras = "0.29"
smallvec = { version = "1.13", features = ["serde"]}
csv = "1.3"
egui_file = "0.19"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0.133"
web-sys = "0.3.74"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["HtmlAnchorElement"] } # to access the DOM (to hide the loading text)
urlencoding = "2.1"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
